@@ -956,6 +956,7 @@ public class CBCBlocks {
 		.transform(shell(MaterialColor.COLOR_RED))
 		.transform(axeOrPickaxe())
 		.transform(CBCBuilderTransformers.projectile("projectile/he_shell"))
+		.transform(CBCBuilderTransformers.safeNbt())
 		.loot(CBCBuilderTransformers.shellLoot())
 		.lang("High Explosive (HE) Shell")
 		.simpleItem()
@@ -966,6 +967,7 @@ public class CBCBlocks {
 		.transform(shell(MaterialColor.COLOR_GREEN))
 		.transform(axeOrPickaxe())
 		.transform(CBCBuilderTransformers.projectile("projectile/shrapnel_shell"))
+		.transform(CBCBuilderTransformers.safeNbt())
 		.loot(CBCBuilderTransformers.shellLoot())
 		.simpleItem()
 		.register();
@@ -997,6 +999,7 @@ public class CBCBlocks {
 		.transform(shell(MaterialColor.COLOR_BLUE))
 		.transform(axeOrPickaxe())
 		.transform(CBCBuilderTransformers.projectile("projectile/ap_shell"))
+		.transform(CBCBuilderTransformers.safeNbt())
 		.loot(CBCBuilderTransformers.shellLoot())
 		.lang("Armor Piercing (AP) Shell")
 		.simpleItem()
@@ -1007,6 +1010,7 @@ public class CBCBlocks {
 		.transform(shell(MaterialColor.COLOR_ORANGE))
 		.transform(axeOrPickaxe())
 		.transform(CBCBuilderTransformers.projectile("projectile/fluid_shell"))
+		.transform(CBCBuilderTransformers.safeNbt())
 		.loot(CBCBuilderTransformers.shellLoot(f -> f.copy("FluidContent", "BlockEntityTag.FluidContent")))
 		.simpleItem()
 		.register();
