@@ -448,6 +448,7 @@ abd5fdc8d203afb3fb91b173f6b555e84e84d208 data/c/tags/fluids/molten_steel.json
 64f968567571f54d4df8b4a36bfccb0624c83f89 data/c/tags/items/nuggets/steel.json
 64f968567571f54d4df8b4a36bfccb0624c83f89 data/c/tags/items/steel_nuggets.json
 b13e187dc2983854c9936308beb20f03fb5bb686 data/create/block_hardness/item_vault.json
+afeb47bb7fedb55b653fc87dac7593385c876d70 data/create/tags/blocks/safe_nbt.json
 e0712cc21a89bd56141a016e73e5d00f58224837 data/createbigcannons/advancements/recipes/createbigcannons/ap_autocannon_round.json
 5b4aee8690d212895f33d02d260b79f9b6e5b32b data/createbigcannons/advancements/recipes/createbigcannons/ap_shot.json
 486fde3f8215cb2f3ac7a09ac58d043406ed2ba2 data/createbigcannons/advancements/recipes/createbigcannons/autocannon_ammo_container.json
